# Stargate

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: stargate.v3.toml
desktop/: stargate-v3-starmail.desktop  stargate-v3.desktop
docs/: E3I_0001_REPORT_TUI_CONTRACT.md  EPOCH2_LOCK_MANIFEST.md  GOOGLE_DRIVE_SYNC_FEATURE.md  MERCURY_LANE_AUTHORITY.md  PIPELINE_V3_SHELL_CONTRACT.md  SP3_TRADE_FORENSICS_TEMPLATE_V3.md  STAREYE_V3_SHELL_CONTRACT.md  STARGATE_V3_ORGANISATION_GATEWAY.md  STARMAIL_V3_SHELL_CONTRACT.md  TUI_STYLE_CONTRACT_V3.md
docs/maps/: ORGANISATION_SURFACE_MAP.md
docs/rollout/: GOOGLE_DRIVE_SYNC_ROLLOUT.md
docs/templates/: animal_report.md  blog_article.md  surface_manifest.md
runtime/reports/: README.md  index.json
scripts/: open-stargate-gateway  open-starmail  pipeline  stareye  stargate  stargate-bucket-review  stargate-flight-pack  stargate-trace-forensics  stargate-venue-buckets  starmail
src/stargate_v3/: __init__.py  app.py  identity.py  navigation.py  palette.py  report_archive.py  starmail_store.py
src/stargate_v3/shells/: bucket_review.py  flight_pack.py  pipeline.py  pseer_boards.py  reports.py  stareye.py  starmail.py  trace_forensics.py  venue_buckets.py
tests/: test_navigation.py
